kubernetes/modcluster.yaml
apiVersion: apps/v1beta1  # apps/v1 for versions from 1.9.0, use apps/v1beta1 for before 1.9.0
kind: Deployment
metadata:
  name: modcluster
  labels:
    app: modcluster
    context: AKSDemo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: modcluster
        context: AKSDemo
    spec:
      containers:
        - name: modcluster
          image: karm/mod_cluster-master-dockerhub
          ports:
            - name: http-port
              containerPort: 80
              protocol: TCP
