kubernetes/modcluster-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: modcluster
  labels:
    app: modcluster
    context: AKSDemo
spec: 
  type: ClusterIP
  ports:
  # the port that this service should serve on
  - port: 80
    protocol: TCP
    targetPort: 80
  # label keys and values that must match in order to receive traffic for this service
  selector: 
    app: modcluster
