kubernetes/ingress-controller.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httprouter
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: ticketapp.<CLUSTER_SPECIFIC_DNS_ZONE>
    http:
      paths:
      - backend:
          serviceName: modcluster
          servicePort: 80
        path: /ticket-monster
